--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+
+}
+.calculator{
+  border-radius: 16px;
+  overflow: hidden;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  appearance: none;
+  border: none;
+  outline: none;
+  font-size: 20px;
+  padding: 16px;
+  cursor: pointer;
+  transition: 0.4s;
+  color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  opacity: 0.9;
+}
+
+.displayinput {
+  text-align: right;
+  font-size: 24px;
+  padding: 16px;
+  background: darkslategray;
+}
+
+.operator {
+  display: flex;
+}
+
+.operator button {
+  flex: 1 1 0%;
+  background-color: palevioletred;
+}
+
+.otherdigit {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.otherdigit button {
+  padding: 20px;
+  background-color: darkslategray;
+  flex: 1 1 33.33%;
+  max-width: 33.33%;
 }
